--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<title>Portfolio</title>
 </head>
 <body>
-  <p>Hello, World!</p>
+  <!-- Navigation menu with hyperlinks -->
+  <nav style="text-align: center;">
+    <a href="#about">About me</a> | 
+    <a href="#research">Research</a>
+  </nav>
+
+  <!-- Centered and styled text -->
+  <div style="text-align: center; margin-top: 20px;">
+    <h1 style="font-size: 24px; font-weight: bold;">Sanga Cho Homepage</h1>
+    <p style="font-size: 20px;">Welcome!</p>
+  </div>
 </body>
 </html>
