--- a/firstpage.html
+++ b/firstpage.html
@@ -19,7 +19,7 @@
     <p style="font-size: 20px;">Welcome!</p>
 
     <!-- Profile picture using an external link -->
-    <img src="https://raw.githubusercontent.com/SangaCho/sangacho.github.io/main/profile.JPG" 
+    <img src="profile.JPG" 
          alt="Sanga Cho Profile Picture" 
          style="width: 200px; height: auto; margin-top: 20px;">
   </div>
